--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,11 +1,11 @@
 #header {
   height: 70px;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 #logo {
   float: left;
-  margin-left: 1rem !important;
+  margin-left: 2rem !important;
 }
 
 .button { 
@@ -15,5 +15,5 @@
   border-radius: 5px;
   box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.05);
   float: right;
-  margin-right: 1rem !important;
+  margin-right: 2rem !important;
 }
