--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -8,3 +8,11 @@
   padding-right: 0 !important;
   padding-left: 0 !important;
 }
+
+#body {
+  background: #EDE6D9 !important;
+  height: 700px;
+  margin-top: 50px;
+  padding: 2rem !important;
+  display: flex;
+}
