--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -11,8 +11,19 @@
 
 #body {
   background: #EDE6D9 !important;
-  height: 700px;
+  height: 500px;
   margin-top: 50px;
+  margin-bottom: 100px;
   padding: 2rem !important;
   display: flex;
+}
+
+#black-filter {
+  position: fixed;
+  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
