Center Text + align Grave + Headstone in Homepage

--- a/src/components/HomePage/Graveyard.css
+++ b/src/components/HomePage/Graveyard.css
@@ -7,11 +7,13 @@
 }
 
 .grave {
-  width: 130px;
+  display: flex !important;
+  width: 130px !important;
   height: 130px;
   background: #6E6F7F;
   color: #fff;
-  justify-content: center;
   margin-bottom: 10px;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
