--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -13,7 +13,7 @@
   width: 150px;
   height: 50px;
   border-radius: 5px;
-  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.05); 
   float: right;
-  margin-right: 2rem !important;
+  margin-left: 2rem !important;
 }
