--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,11 +1,6 @@
 #header {
-  height: 70px;
-  padding: 20px 0;
-}
-
-#logo {
-  float: left;
-  margin-left: 2rem !important;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .button { 
@@ -14,6 +9,17 @@
   height: 50px;
   border-radius: 5px;
   box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.05);
-  float: right;
-  margin-right: 2rem !important;
+}
+
+.button:first-child {
+  margin-right: 2rem;
+}
+
+.MuiFab-primary {
+  color: #000 !important;
+  background-color: #d2d8e8 !important;
+}
+
+.MuiMenu-list {
+  background-color: #ede6d9;
 }
