--- a/src/pages/cemetery/index.css
+++ b/src/pages/cemetery/index.css
@@ -97,3 +97,51 @@
   object-fit: cover;
 }
 
+@media only screen and (max-width: 760px) {
+  .small-image {
+    width: 40px;
+    height: 40px;
+  }
+
+  .slick-dots li {
+    width: 40px !important;
+    height: 40px !important;
+  }
+}
+
+@media only screen and (max-width: 670px) {
+  .small-image {
+    width: 30px;
+    height: 30px;
+  }
+
+  .slick-dots li {
+    width: 30px !important;
+    height: 30px !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .small-image {
+    width: 80px;
+    height: 80px;
+  }
+
+  .slick-dots li {
+    width: 80px !important;
+    height: 80px !important;
+  }
+
+  .comment-send {
+    align-items: center;
+    margin-top: 10px !important;
+  }
+
+  .slick-dots {
+    top: -300px !important;
+  }
+
+  .sliderContainer {
+    margin-top: 330px !important;
+  }
+}
