--- a/src/pages/cemetery/index.css
+++ b/src/pages/cemetery/index.css
@@ -6,6 +6,8 @@
   display: inline-block;
   padding: 15px 30px;
   background-color: #ede6d9;
+  border-radius: 3px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .img {
@@ -26,8 +28,12 @@
 .cemetery-pet-info {
   width: 100%;
   height: 244px;
+  margin-left: 40px;
+  padding: 10px;
   background: #ede6d9;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 3px rgba(0,0,0,0.05);
+  box-sizing: border-box;
+  border-radius: 3px;
 }
 
 .pet-info-comment {
