--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -1,8 +1,9 @@
 #header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 70px;
-  padding: 20px 30px;
+  padding: 15px 30px;
 }
 
 #logo {
