--- a/src/pages/homepage/index.css
+++ b/src/pages/homepage/index.css
@@ -5,22 +5,22 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 
 #intro {
   display: flex;
-  background: #D2D8E8 !important; 
+  background: #d2d8e8 !important;
   padding: 2rem !important;
   text-align: center;
 }
@@ -31,10 +31,8 @@
 }
 
 #body {
-  background: #EDE6D9 !important;
+  background: #ede6d9 !important;
   height: 500px;
-  margin-top: 50px;
-  margin-bottom: 100px;
   padding: 2rem !important;
   display: flex;
   text-align: center;
@@ -42,7 +40,7 @@
 
 #black-filter {
   position: fixed;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
   top: 0;
