--- a/src/components/homepage/SearchSection.css
+++ b/src/components/homepage/SearchSection.css
@@ -12,12 +12,24 @@
   margin: 10px 5% !important;
 }
 
+.section-title {
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 .result {
   background: #d2d8e8;
   width: 90%;
   margin: 10px 5% !important;
-  height: 75%;
+  height: 70%;
   overflow-y: auto;
+}
+
+.field-title {
+  padding: 10px 15px;
+  width: 90%;
 }
 
 .MuiInput-underline:before {
