--- a/src/components/homepage/SearchSection.css
+++ b/src/components/homepage/SearchSection.css
@@ -1,9 +1,8 @@
 #search-section {
-  width: 50%;
+  height: 100%;
   background: #fff;
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.05);
   padding: 10px;
-  margin-right: 20px;
 }
 
 .input-field {
