--- a/src/components/homepage/SearchSection.css
+++ b/src/components/homepage/SearchSection.css
@@ -1,5 +1,5 @@
 #search-section {
-  height: 100%;
+  height: 500px;
   background: #fff;
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.05);
   padding: 10px;
