--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -2,6 +2,7 @@
   display: flex;
   background-color: #f8f7f3;
   justify-content: space-between;
+  overflow: hidden;
   align-items: center;
   height: 70px;
   padding: 15px 30px;
